another fix for the menu tabs on mobile

--- a/src/components/Header/Nav/Nav.css
+++ b/src/components/Header/Nav/Nav.css
@@ -318,11 +318,11 @@
       /* menu cross-links begin */
       .menu-cross-links {
         /* font-family: Jubilat, serif; */
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 4rem;
+        /*position: fixed;*/
+        /*bottom: 0;*/
+        /*left: 0;*/
+        /*width: 100%;*/
+        /*height: 4rem;*/
       }
       /* @media (min-width: 768px) {
       .menu-cross-links {
